--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# --- For-Bot-Working --------- #
+# --- FOr-Bot-Working --------- #
 git+https://github.com/KurimuzonAkuma/pyrogram
 TgCrypto
 pyromod==1.5
